# picochat-mlx

./: .gitignore  README.md  pyproject.toml
nanochat/: gpt.py  optim_factory.py
runs/: runcpu.md  runcpu.sh
rustbpe/: Cargo.toml  install.md  manual.md  pyproject.toml
rustbpe/src/: lib.rs
tests/: test_performance.py
