[package]
name = "rustbpe"
version = "0.1.0"
edition = "2021"
description = "A BPE (Byte Pair Encoding) tokenizer written in Rust with Python bindings"

[lib]
name = "rustbpe"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3      = { version = "0.27" }
dary_heap = "0.3"
fancy-regex = "0.16.1"
log       = "0.4.28"
pyo3-log  = "0.13"
ahash     = "0.8.12"
rayon     = "1.11.0"
compact_str = "0.9.0"

[features]
default          = []
extension-module = ["pyo3/extension-module"]

[profile.release]
lto           = true
codegen-units = 1
